welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:8: error: not found: value x
    else if (x > maxi2)
             ^